Прописывает стили для header

--- a/source/sass/components/page-header/page-header.scss
+++ b/source/sass/components/page-header/page-header.scss
@@ -1,4 +1,10 @@
 .page-header {
   background-color: $primary-color;
   color: #fff;
+  padding-left: 60px;
+  padding-right: 60px;
+
+  &__container {
+    display: flex;
+  }
 }
