Создает переменные с цветом для каждого маркера

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -2,3 +2,7 @@ $primary-color: #3744bd;
 $btn-background-active: #f0f3f5;
 $btn-text-color-active: #4f4f4f;
 $btn-text-color: #bbbbbb;
+
+$marker-green: #62d2b1;
+$marker-red: #e34040;
+$marker-yellow: #ffcc40;
