--- a/source/sass/components/main/filters.scss
+++ b/source/sass/components/main/filters.scss
@@ -34,6 +34,7 @@
 
       .calendar {
         box-sizing: border-box;
+        display: none;
 
         position: absolute;
         width: 462px;
