Создает переменные для 2х используемых цветов для текста

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -6,3 +6,6 @@ $btn-text-color: #bbbbbb;
 $marker-green: #62d2b1;
 $marker-red: #e34040;
 $marker-yellow: #ffcc40;
+
+$text-color-primary: #1e1e1e;
+$text-color-secondary: #bbbbbb;
