--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,9 +6,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
+  font-family: 'Roboto';
   font-size: 18px;
   background-color: #f9fafc;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  word-wrap: normal;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 // *,
