--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,12 +1,13 @@
-@import './variables';
-@import './visually-hidden';
-@import './components/page-header/index';
-@import './components/main/index';
+@import "./fonts";
+@import "./variables";
+@import "./visually-hidden";
+@import "./components/page-header/index";
+@import "./components/main/index";
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 18px;
   background-color: #f9fafc;
 }
