--- a/source/sass/components/page-header/index.scss
+++ b/source/sass/components/page-header/index.scss
@@ -1,3 +1,3 @@
-@import './page-header';
-@import './nav.scss';
-@import './user-nav.scss';
+@import "./page-header";
+@import "./site-navigation.scss";
+@import "./user-navigation.scss";
