--- a/source/sass/components/main/worklog.scss
+++ b/source/sass/components/main/worklog.scss
@@ -38,7 +38,7 @@
     width: 100px;
     height: 6px;
     border-radius: 20px;
-    background: #e9ecf2;
+    background: $gray;
 
     &__done {
       width: 60%;
@@ -59,10 +59,6 @@
     background-position: center;
   }
 
-  &__upload-btn {
-    background-image: url('../icons/upload.svg');
-  }
-
   .event {
     font-size: 18px;
     &__list {
@@ -70,22 +66,41 @@
       margin: 0;
       padding: 0;
       display: flex;
+      flex-direction: column;
+      margin-bottom: 45px;
     }
 
     &__item {
       box-sizing: border-box;
-      padding-top: 15px;
-      padding-bottom: 15px;
+      padding: 5px 35px;
       display: flex;
-      flex-grow: 1;
       align-items: center;
+      flex-grow: 1;
 
       &:first-child {
-        border-top: 1px solid #e9ecf2;
+        border-top: 1px solid $gray;
       }
 
-      border-top: 1px dashed #e9ecf2;
-      border-bottom: 1px dashed #e9ecf2;
+      border-top: 1px dashed $gray;
+      border-bottom: 1px dashed $gray;
+
+      &--active {
+        background-color: #fff;
+        border-radius: 10px;
+        position: relative;
+
+        &::after {
+          content: "";
+          width: 58px;
+          height: 100%;
+          position: absolute;
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+          background: $primary-color url("../icons/more.svg") right no-repeat;
+          right: -25px;
+          z-index: -1;
+        }
+      }
     }
 
     &__timing {
@@ -99,7 +114,7 @@
 
     &__indicator {
       width: 3.25px;
-      height: 100%;
+      height: 76px;
       background: #62d2b1;
       border-radius: 1px;
       margin-right: 25px;
@@ -133,10 +148,16 @@
 
     &__bar {
       width: 105px;
-      height: 1px;
+      height: 4px;
       background: #f0f3f5;
       border-radius: 10px;
       margin-right: 50px;
+      &--progress {
+        height: 4px;
+        width: 30%;
+        background-color: $marker-yellow;
+        border-radius: 10px;
+      }
     }
 
     &__duration {
@@ -147,8 +168,29 @@
       margin-right: 45px;
     }
 
-    &__timer-start-btn {
-      background-image: url(../icons/start.svg);
+    &__timer-pause-btn {
+      background-color: $primary-color;
+    }
+  }
+
+  .timebar {
+    &__timeline {
+      width: 100%;
+      height: 23px;
+      background-color: #fff;
+      box-shadow: 0 15px 30px rgba(216, 226, 232, 0.12);
+      border-radius: 10px;
+    }
+    &__timing-list {
+      color: $text-color-gray;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: space-between;
+      box-sizing: border-box;
+      padding-left: 35px;
+      padding-right: 35px;
     }
   }
 }
