Импортирует стили для блока sync

--- a/source/sass/components/main/index.scss
+++ b/source/sass/components/main/index.scss
@@ -1,3 +1,5 @@
-@import './filters';
-@import './main';
-@import './worklog.scss';
+@import "./filters";
+@import "./main";
+@import "./worklog.scss";
+@import "./timer.scss";
+@import "./sync.scss";
