Устанавливает more-vertical

--- a/source/sass/components/main/worklog.scss
+++ b/source/sass/components/main/worklog.scss
@@ -96,7 +96,8 @@
           position: absolute;
           border-top-right-radius: 10px;
           border-bottom-right-radius: 10px;
-          background: $primary-color url("../icons/more.svg") right no-repeat;
+          background: $primary-color url("../icons/more-vertical.svg") right
+            no-repeat;
           right: -25px;
           z-index: -1;
         }
