--- a/source/sass/components/main/sync.scss
+++ b/source/sass/components/main/sync.scss
@@ -48,4 +48,13 @@
   &__calendar {
     margin-left: auto;
   }
+
+  &__events {
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
 }
