Добавляет переменные для светло серого и красного цветов

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -12,5 +12,8 @@ $text-color-primary: #1e1e1e;
 $text-color-secondary: #bbbbbb;
 
 $gray: #e9ecf2;
+$highlight-gray: #f3f5f7;
 
 $menu-hover: #e3f3ff;
+
+$btn-red: #eb5757;
