--- a/source/sass/components/main/index.scss
+++ b/source/sass/components/main/index.scss
@@ -2,5 +2,5 @@
 @import "./filters";
 @import "./main";
 @import "./worklog.scss";
-@import "./timer.scss";
+@import "./timer/index.scss";
 @import "./sync.scss";
