Описывает стили для event__item

--- a/source/sass/components/main/menu.scss
+++ b/source/sass/components/main/menu.scss
@@ -5,9 +5,8 @@
   &__more-btn {
     width: 24px;
     height: 24px;
-
-    background: transparent url("../icons/more-horizontal.svg") center no-repeat;
     border: none;
+    background-color: transparent;
   }
 
   &__list {
