--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,8 +26,6 @@ body {
   overflow: hidden;
 }
 
-// *,
-// ::after,
-// ::before {
-//   box-sizing: inherit;
-// }
+.hidden {
+  display: none;
+}
