--- a/source/sass/components/main/worklog.scss
+++ b/source/sass/components/main/worklog.scss
@@ -60,121 +60,119 @@
   }
 
   .event {
-    .menu__list {
-      left: -110px;
-      top: 50px;
-    }
     font-size: 18px;
     &__list {
-      list-style-type: none;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 45px;
+      list-style: none;
     }
 
     &__item {
-      box-sizing: border-box;
-      padding: 5px 35px;
       display: flex;
-      align-items: center;
-      flex-grow: 1;
+      flex-wrap: nowrap;
+      max-width: 1140px;
+      min-width: 100%;
+      position: relative;
+      padding-right: 35px;
+      z-index: 2;
 
-      &:first-child {
-        border-top: 1px solid $gray;
-      }
-
-      border-top: 1px dashed $gray;
-      border-bottom: 1px dashed $gray;
-
-      &--active {
+      &:hover .event__wrapper {
         background-color: #fff;
         border-radius: 10px;
-        position: relative;
+      }
 
-        &::after {
-          content: "";
-          width: 58px;
-          height: 100%;
-          position: absolute;
-          border-top-right-radius: 10px;
-          border-bottom-right-radius: 10px;
-          background: $primary-color url("../icons/more-vertical.svg") right
-            no-repeat;
-          right: -25px;
-          z-index: -1;
-        }
+      &:hover .event__menu {
+        transform: translateX(0px);
+        opacity: 1;
       }
     }
 
-    &__timing {
-      color: #bbbbbb;
+    &__wrapper {
+      display: flex;
+      align-items: center;
+      box-sizing: border-box;
+      padding: 5px 35px;
+      min-width: 100%;
+      cursor: pointer;
+      z-index: 2;
+
+      &:hover {
+        background-color: #fff;
+        border-radius: 10px;
+      }
     }
 
-    &__start {
-      color: $text-color-primary;
-      font-weight: 500;
+    &__menu {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 56px;
+      height: 86px;
+      position: absolute;
+      background-color: $primary-color;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      right: 0px;
+      transform: translateX(-35px);
+      transition: transform 0.5s ease;
+      opacity: 0;
+      z-index: 0;
     }
 
-    &__indicator {
-      width: 3.25px;
-      height: 76px;
-      background: #62d2b1;
-      border-radius: 1px;
-      margin-right: 25px;
-      margin-left: 25px;
+    &__end {
+      color: #bbb;
     }
 
     &__details {
       display: flex;
+      align-items: center;
       flex-grow: 1;
 
       &--right {
-        margin-left: auto;
         display: flex;
+        margin-left: auto;
         align-items: center;
       }
     }
 
     &__id {
+      color: #828282;
       margin: 0;
       padding: 0;
-      color: #828282;
-      margin-bottom: 10px;
+    }
+
+    &__bar {
+      width: 106px;
+      height: 5px;
+      background-color: $gray;
+      border-radius: 10px;
+      margin-right: 50px;
     }
 
     &__name {
       margin: 0;
       padding: 0;
-      font-weight: 500;
+      color: #1e1e1e;
       font-size: 20px;
-    }
-
-    &__bar {
-      width: 105px;
-      height: 4px;
-      background: #f0f3f5;
-      border-radius: 10px;
-      margin-right: 50px;
-      &--progress {
-        height: 4px;
-        width: 30%;
-        background-color: $marker-yellow;
-        border-radius: 10px;
-      }
     }
 
     &__duration {
       margin: 0;
       padding: 0;
-      color: #bbbbbb;
-      font-weight: 500;
-      margin-right: 45px;
+      margin-right: 35px;
     }
 
-    &__timer-pause-btn {
-      background-color: $primary-color;
+    &__timer-start-btn {
+      padding: 0;
+    }
+
+    &__status {
+      width: 3px;
+      height: 76px;
+      border-radius: 1px;
+      background-color: $gray;
+      margin-left: 25px;
+      margin-right: 25px;
     }
   }
 
@@ -196,6 +194,12 @@
       box-sizing: border-box;
       padding-left: 35px;
       padding-right: 35px;
+    }
+  }
+  .menu {
+    &__list {
+      top: 100px;
+      left: -105px;
     }
   }
 }
